FIXED OVERFLOW PROBLEM RAAA

--- a/style.css
+++ b/style.css
@@ -1,31 +1,38 @@
 #mainBox {
   display: flex;
   flex-direction: column;
-  align-items: left;
   height: 75vh;
   width: 75%;
   border-style:solid;
   border-width:1px;
   position:relative;
-}
-
-.chatBox {
-  width: 100%;
-  height: 100%;
-  padding: 0;
-  margin: 0;
-  overflow-y:auto;
-  overflow-x:hidden;
-  text-wrap:wrap;
+  overflow:auto;
 }
 
 #pInput {
   position: relative;
   padding-top: 10px;
+  width:74.5%;
   padding-bottom: 10px;
-  margin-top:3px;
   text-indent: 10px;
-  border:none;
-  border-bottom: 2px solid black;
-  border-top: 2px solid black;
+  border:2px solid black;
+}
+
+.textBox {
+position: relative;
+align-self: flex-end;
+height:100%;
+width:100%;
+overflow:auto;
+}
+
+
+.inputBox {
+  position: relative;
+  bottom:0;
+  width:100%;
+  }
+
+.lastText {
+  margin:5px;
 }
